--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
-    "debug": "^4.0.1"
+    "debug": "^4.0.1",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
