--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "debug": "^4.0.1",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
@@ -26,7 +27,8 @@
     "eslint-plugin-react": "^7.11.1",
     "husky": "^1.1.1",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.4"
+    "nodemon": "^1.18.4",
+    "redux-mock-store": "^1.5.3"
   },
   "scripts": {
     "build": "babel src --out-dir build --ignore 'src/**/__tests__/*.js','src/**/*.spec.js','src/**/*.test.js'",
