--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "main": "index.js",
   "author": "Jan Majek",
   "license": "MIT",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/jancimajek/mars-robots.git"
+  },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "debug": "^4.0.1",
